@@ -19,6 +19,7 @@ Version 1.4.21 - SVN
     mailing list, etc.) (Many thanks to Zdenek Pytela for the untiring help
     diagnosing and testing.)
   - Fixed minor vulnerability in Mail Fetch plugin [CVE-2010-1637/TEHTRI-SA-2010-009]
+  - Now properly quote personal part of encoded addresses when replying.
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
